# SolanaFaucet

./: .gitignore  Anchor.toml  Cargo.toml  README.md  install_solana.sh  package-lock.json  package.json  tsconfig.json
faucet/: Anchor.toml
migrations/: deploy.ts
programs/faucet/: Cargo.toml
programs/faucet/src/: lib.rs
tests/: faucet.ts
